Updated nav bar, with other minor tweaks

--- a/nav_chunk.html
+++ b/nav_chunk.html
@@ -2,7 +2,19 @@
 	<a href="/"><img class="logo" src="/media/crow_logo.png"></a>
 	<div class="separator"><div></div></div>
 	<ul class = "nav_links">
-		<li><a href="/educational/physics">Educational</a></li>
+		<li class="dropdown">
+			<a style="cursor: default;">Educational</a>
+			<div class="dropdown_wrapper">
+				<ul class = "dropdown_content">
+					<li>
+						<a href="/educational/physics">Physics</a>
+					</li>
+					<li>
+						<a href="/educational/math">Math</a>
+					</li>
+				</ul>
+			</div>
+		</li>
 		<li><a href="/hhum206">HHUM206</a></li>
 		<li><a href="/test_chamber">Test Chamber</a></li>
 	</ul>
