--- a/index.html
+++ b/index.html
@@ -28,17 +28,22 @@
 
 	<div id="disp_container">
 		<a href="/physics"><div class="disp_block">
-			<img src="/media/circle.png">
+			<div style="display: block; width:auto">
+				<img class="img_overlay" src="/media/circle.png"/>
+				<img class="block_img" src="/media/demo_img.png"/>
+			</div>
 			<h2>Educational Content</h2>
 			<p>A while back I put together some articles on basic physics concepts. I might add more to this at a later date, but for the moment it's fairly sparse.</p>
 		</div></a>
 		<a href="/hhum206"><div class="disp_block">
-			<img src="/media/circle.png">
+			<img class="img_overlay" src="/media/circle.png">
+			<img class="block_img" src="/media/demo_img.png"/>
 			<h2>Honors Humanities Project</h2>
 			<p>During Spring 2023 I did a project looking at portrayals of time travel in literature and wrote a few essays on it. In addition to the essays, I began writing a short story. I've posted this content here if you're interested.</p>
 		</div></a>
 		<a href="/test_chamber"><div class="disp_block">
-			<img src="/media/circle.png">
+			<img class="img_overlay" src="/media/circle.png">
+			<img class="block_img" src="/media/demo_img.png"/>
 			<h2>The Test Chamber</h2>
 			<p>This is more for my own amusement. These are just odd widgets and things that I've put together in my free time.</p>
 		</div></a>
