Update landing page and the HHUM206 section with new PDFs and story section

--- a/hhum206/essays/AWIT/index.html
+++ b/hhum206/essays/AWIT/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Scared Crow</title>
 	<link rel="stylesheet" href = "/nav.css"/>
-	<link rel="stylesheet" href = "../essay_format.css"/>
+	<link rel="stylesheet" href = "../../pdf_styling.css"/>
 
 	<script src="/technical/jquery.min.js"></script>
   <script> 
