--- a/index.html
+++ b/index.html
@@ -22,28 +22,32 @@
 	<div id="spacer"></div>
 	<div id="banner"></div>
 	<div id="banner_text">
-		<h1>I have nothing profound to say</h1>
-		<h3>Really, I don't</h3>
+		<h1>You must be lost</h1>
+		<h4>Happy to have you all the same :)</h4>
 	</div>
 
 	<div id="disp_container">
-		<a href="/physics"><div class="disp_block">
-			<div style="display: block; width:auto">
+		<a href="/educational/physics"><div class="disp_block">
+			<div class="block_img_wrapper">
 				<img class="img_overlay" src="/media/circle.png"/>
-				<img class="block_img" src="/media/demo_img.png"/>
+				<img class="block_img" src="/media/book-icon.png"/>
 			</div>
 			<h2>Educational Content</h2>
 			<p>A while back I put together some articles on basic physics concepts. I might add more to this at a later date, but for the moment it's fairly sparse.</p>
 		</div></a>
 		<a href="/hhum206"><div class="disp_block">
-			<img class="img_overlay" src="/media/circle.png">
-			<img class="block_img" src="/media/demo_img.png"/>
+			<div class="block_img_wrapper">
+				<img class="img_overlay" src="/media/circle.png">
+				<img class="block_img" src="/media/hhum_shield.png"/>
+			</div>
 			<h2>Honors Humanities Project</h2>
 			<p>During Spring 2023 I did a project looking at portrayals of time travel in literature and wrote a few essays on it. In addition to the essays, I began writing a short story. I've posted this content here if you're interested.</p>
 		</div></a>
 		<a href="/test_chamber"><div class="disp_block">
-			<img class="img_overlay" src="/media/circle.png">
-			<img class="block_img" src="/media/demo_img.png"/>
+			<div class="block_img_wrapper">
+				<img class="img_overlay" src="/media/circle.png">
+				<img class="block_img" src="/media/flask.png"/>
+			</div>
 			<h2>The Test Chamber</h2>
 			<p>This is more for my own amusement. These are just odd widgets and things that I've put together in my free time.</p>
 		</div></a>
@@ -51,8 +55,6 @@
 	<br style="clear:left"/>
 	<br/>
 
-
-	<p>Also, here's a <a href="/educational/math">temp link</a> to another page</p>
 	<div id="footer"></div>
 </body>
 </html>
