--- a/nav_chunk.html
+++ b/nav_chunk.html
@@ -6,12 +6,8 @@
 			<a style="cursor: default;">Educational</a>
 			<div class="dropdown_wrapper">
 				<ul class = "dropdown_content">
-					<li>
-						<a href="/educational/physics">Physics</a>
-					</li>
-					<li>
-						<a href="/educational/math">Math</a>
-					</li>
+					<li><a href="/educational/physics">Physics</a></li>
+					<li><a href="/educational/math">Math</a></li>
 				</ul>
 			</div>
 		</li>
