--- a/hhum206/index.html
+++ b/hhum206/index.html
@@ -5,8 +5,8 @@
 	<title>HHUM206</title>
 	<link rel="stylesheet" href = "/nav.css"/>
 	<link rel="stylesheet" href = "/body.css"/>
+	<link rel="stylesheet" href = "styles.css"/>
 
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
 	<script src="/technical/jquery.min.js"></script>
     <script> 
     $(function(){
@@ -25,21 +25,29 @@
 		<h1>Welcome to my HHUM206 Project!</h1>
 		<br/>
 		<p>This project was completed as part of my involvement in the the Honors Humanities LLP of UMD. The requirements for this project were fairly open ended in terms of what we were allowed to do. So I decided to research portrayals of time travel in literature.</p>
-		<p>This project has two main parts. I started by writing a few essays on popular time travel works. In doing this I've just scratched the surface on the many works that could fall under this subgenre. After doing this, I shifted my focus into creating my own time-travel-inspired plot and began writing the beginning of this story. <mark>Hello!</mark></p>
-		
+		<p>This project has two main parts. I started by writing a few essays on popular time travel works. In doing this I've just scratched the surface on the many works that could fall under this subgenre. After doing this, I shifted my focus to creating my own time-travel-inspired plot and began writing the beginning of this story. More information on each part of the project can be found below.</p>
 		<br/>
 
 		<h2>Essays</h2>
+		<p>Below are links to the four essays I wrote on this topic. Each includes a synopsis, which gives a brief overview of the corresponding novel/story. This should help contextualize the subsequent analysis.</p>
+		<br>
 		<ul>
 			<li><a href="essays/AWIT">An Analysis of Madeleine L'Engle's "A Wrinkle in Time"</a></li>
 			<li><a href="essays/TTM">An Analysis of H.G.Wells' "The Time Machine"</a></li>
 			<li><a href="essays/TCTWB">An Analysis of Edward Mitchell's "The Clock That Went Backward"</a></li>
 			<li><a href="essays/EOE">An Analysis of Isaac Asimov's "The End of Eternity"</a></li>
 		</ul>
-		<br/>
-		<h2>Story</h2>
-		<p><a href="./novel_writing">Bit of a work in progress...</a></p>
-	</div>
+		<br><br>
 
+		<h2>Story</h2>
+		<p>Below are links to the portion of the story that I've written thus far, a plot synopsis of the remainder of the story, and a short storytelling format demo that I put together. The demo was made to toy around with presenting a plot from multiple perspectives. Admittedly it's a bit lackluster and requires some work, but at least functions as a proof of concept.</p>
+		<br>
+		<ul>
+			<li><a href="novel_writing/novel">Written Work</a></li>
+			<li><a href="novel_writing/synopsis">Plot Synopsis</a></li>
+			<li><a href="novel_writing/experiment">Storytelling demo</a></li>
+		</ul>
+	</div>
+	<div id="footer"></div>
 </body>
 </html>
