Added original proposal to hhum section

--- a/educational/math/index.html
+++ b/educational/math/index.html
@@ -24,36 +24,50 @@
 	<div id="spacer"></div>
 
 	<div id="info">
-		<p>Hello!</p>
-		<p>Just some stuff</p>
-		<h3>Equations and such</h3>
+		<h1>Welcome to the Math Directory!</h1>
+		<br>
+		<p>This directory houses topics falling under math and statistics. I've still got to release a few articles on this, but in the meantime I'll just toss bits of the roadmap down below.</p>
+		<br>
+
+		<h2>Linear Algebra</h2>
+		<h2>Calculus</h2>
+		<h2>Differential Equations</h2>
 		<ul>
-			<li>Central Limit Theorem (CLT): \( \frac{\sqrt{n}(\bar{X}_n-\mu)}{\sigma}  \xrightarrow[]{d} \mathcal{N}(0,1) \)</li>
-			<li>Schrodinger Eq: \( \hat{H}\ket{\Psi} = i\hbar\frac{\partial}{\partial t} \ket{\Psi}\)</li>
-			<li>Einstein-Field Eqs: \( G_{\mu\nu}+\Lambda g_{\mu\nu} = \frac{8 \pi G}{c^4} T_{\mu\nu}\)</li>
-			<li>Maxwell's Eqs: </li>
-				<ul>
-					<li>\(\nabla\cdot\textbf{E} = \frac{\rho}{\epsilon_0}\)</li>
-					<li>\(\nabla\cdot\textbf{B} = 0\)</li>
-					<li>\(\nabla\times\textbf{E} = -\frac{\partial\textbf{B}}{\partial t}\)</li>
-					<li>\(\nabla\times\textbf{B} = \mu_0\left(\textbf{J}+\epsilon_0 \frac{\partial\textbf{E}}{\partial t} \right) \)</li>
-				</ul>
-		</ul>
-		<h3>More visual stuff</h3>
+			<li>Ordinary Differential Equations (ODEs)</li>
+			<ul>
+				<li>Introduction to ODEs</li>
+			</ul>
+			<li>Partial Differential Equations (PDEs)</li>
+			<ul>
+				<li>Classes of PDEs</li>
+				<li>Method of Characteristics</li>
+				<li>The Transport Equation</li>
+				<li>The Wave Equation</li>
+				<li>The Diffusion Equation</li>
+			</ul>
+		</ul><br>
+
+		<h2>Probability Theory</h2>
 		<ul>
-			<li>Penrose diagrams:</li>
+			<li>Hello!</li>
+		</ul><br>
+
+		<h2>Statistics</h2>
+		<p><a href="./statistics/study_guide">The Ultimate Study Guide!</a> (send help)</p>
+		<ul>
+			<li>Point Estimators</li>
+			<ul>
+				<li>Maximum Likelihood Estimation</li>
 				<ul>
-					<li><img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Penrose_diagram.svg" style="object-fit: cover; height: 200px"/></li>
+					<li>Fisher Information and the Cramér–Rao Bound (CRB)</li>
 				</ul>
-			<li>Lorenz attractor:</li>
-				<ul>
-					<li><img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Lorenz_attractor_yb.svg" style="object-fit: cover; height: 200px"/></li>
-				</ul>
-			<li>Feynman Diagrams:</li>
-				<ul>
-					<li><img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Feynmann_Diagram_Gluon_Radiation.svg" style="object-fit: cover; height: 200px"/></li>
-				</ul>
-		</ul>
+				<li>Method of Moments Estimation</li>
+			</ul>
+			<li>Confidence Intervals</li>
+			<li>Order Statistics</li>
+			<li>Consistency and Limiting Distributions</li>
+			<li>Hypothesis Testing</li>
+		</ul><br>
 	</div>
 </body>
 </html>
