--- a/educational/physics/index.html
+++ b/educational/physics/index.html
@@ -21,9 +21,9 @@
 	<div id="spacer"></div>
 	<div id="info">
 		<h1>Welcome to the physics directory!</h1>
-		<br />
-		<p>Below are a list of the topics currently covered. More will be coming soon.</p>
-		<br />
+		<br>
+		<p>Below are a list of the topics currently covered. Hopefully I'll add more at some point</p>
+		<br>
 
 		<h2>Kinematics</h2>
 		<ul>
@@ -47,7 +47,30 @@
 				<li>Potential Energy</li>
 				<li>Conservative and Nonconservative forces</li>
 			</ul>
-		</ul>
+			<li>Hydrostatics</li>
+		</ul><br>
+
+		<h2>Electromagnetism</h2>
+		<ul>
+			<li>Coulomb's Law</li>
+			<li>Electric Fields</li>
+			<ul>
+				<li>Gauss's Law for Electric Fields</li>
+			</ul>
+			<li>Electric Potential Energy</li>
+			<li>Electric Potential</li>
+			<li>Maxwell's Equations</li>
+		</ul><br>
+
+		<h2>Thermodynamics</h2>
+		<br>
+
+		<h2>Quantum Mechanics</h2>
+		<br>
+
+		<h2>Relativity</h2>
+		<br>
+		
 	</div>
 </body>
 </html>
