--- a/hhum206/index.html
+++ b/hhum206/index.html
@@ -47,6 +47,10 @@
 			<li><a href="novel_writing/synopsis">Plot Synopsis</a></li>
 			<li><a href="novel_writing/experiment">Storytelling demo</a></li>
 		</ul>
+		<br><br>
+
+		<h2>Additional Documents</h2>
+		<p>If you're interested in what my original proposal for this project looked like <a href="./original_proposal">it can be found here</a> (note: this is not what the final proposal looked like).</p>
 	</div>
 	<div id="footer"></div>
 </body>
