--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="banner"></div>
 	<div id="banner_text">
 		<h1>You must be lost</h1>
-		<h4>Happy to have you all the same :)</h4>
+		<h4>Don't worry, so am I</h4>
 	</div>
 
 	<div id="disp_container">
