--- a/test_chamber/flashcards/index.html
+++ b/test_chamber/flashcards/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href = "/nav.css"/>
 	<link rel="stylesheet" href = "styles.css"/>
 
+	<script id="MathJax-script" async src="/technical/MathJax/tex-chtml.js"></script>
+
 	<script src="/technical/jquery.min.js"></script>
   <script> 
     $(function(){
@@ -19,11 +21,11 @@
 <body>
 	<div id="nav_div"></div>
 	<div id="spacer"></div>
-	<br><br>
 
-	<p><a href="./flashcards">Shortcut to flashcards</a></p><br><br>
+	<div id="container">
+		<div id="flash">\(x^2 = -1\)</div>
+	</div>
 
-	<canvas id="myCanvas" width="480" height="320"></canvas>
 	<script src="code.js"></script>
 </body>
 </html>
